--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -243,6 +243,10 @@ bind = , print, exec, grim $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim
 bind = CTRL, print, exec, grim -g "$(slurp -o)" $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
 bind = CTRL SHIFT, print, exec, grim -g "$(slurp)" $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
 
+# Special
+bind = Super+Shift+M, exec, ~/.config/hypr/scripts/modswitch.sh
+bind = $mainMod, F, exec, ~/.config/hypr/scripts/hyprfocus.sh
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
