--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -246,7 +246,7 @@ bind = CTRL SHIFT, print, exec, grim -g "$(slurp)" $(xdg-user-dir PICTURES)/Scre
 # Special
 bind = Super+Shift+M, exec, ~/.config/hypr/scripts/modswitch.sh
 bind = $mainMod, F, exec, ~/.config/hypr/scripts/hyprfocus.sh
-
+bind = $mainMod, L, exec, hyprctl setcursorpos $(hyprctl clients active | grep "monitor:" | cut -d" " -f4)
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
