temporarily removed modswitch.sh

--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -244,7 +244,7 @@ bind = CTRL, print, exec, grim -g "$(slurp -o)" $(xdg-user-dir PICTURES)/Screens
 bind = CTRL SHIFT, print, exec, grim -g "$(slurp)" $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
 
 # Special
-bind = Super+Shift+M, exec, ~/.config/hypr/scripts/modswitch.sh
+# bind = Super+Shift+M, exec, ~/.config/hypr/scripts/modswitch.sh
 bind = $mainMod, F, exec, ~/.config/hypr/scripts/hyprfocus.sh
 bind = $mainMod, L, exec, hyprctl setcursorpos $(hyprctl clients active | grep "monitor:" | cut -d" " -f4)
 ##############################
