added screenshot capability to Hyprland, will focus on mouse escape in bethesda titles with next update

--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -239,9 +239,7 @@ bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
 # Screenshots
-bind = , print, exec, grim $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
-bind = CTRL, print, exec, grim -g "$(slurp -o)" $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
-bind = CTRL SHIFT, print, exec, grim -g "$(slurp)" $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
+bind = , print, exec, grim -g "$(slurp)"
 
 # Special
 # bind = Super+Shift+M, exec, ~/.config/hypr/scripts/modswitch.sh
