Screenshots V.2. Will try and work on mouse escape as soon as screenshots work

--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -239,8 +239,7 @@ bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
 # Screenshots
-bind = , print, exec, grim -g "$(slurp)"
-
+bind = , print, exec, slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
 # Special
 # bind = Super+Shift+M, exec, ~/.config/hypr/scripts/modswitch.sh
 bind = $mainMod, F, exec, ~/.config/hypr/scripts/hyprfocus.sh
