--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -239,7 +239,8 @@ bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
 # Screenshots
-bind = , print, exec, slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
+bind = , print, exec, grim -g "$(slurp)" $HOME/Pictures/Screenshots/$(date +'%s_grim.png')
+
 # Special
 # bind = Super+Shift+M, exec, ~/.config/hypr/scripts/modswitch.sh
 bind = $mainMod, F, exec, ~/.config/hypr/scripts/hyprfocus.sh
