gamescope settings in hyprland.conf changed

--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -259,3 +259,6 @@ bind = $mainMod, L, exec, hyprctl setcursorpos $(hyprctl clients active | grep "
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 # windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+# Gamescope Windows Float
+windowrulev2 = float, class:^(gamescope)$
