i3.conf updated to reflect screen usage

--- a/home/i3/i3.conf
+++ b/home/i3/i3.conf
@@ -14,7 +14,8 @@ exec --no-startup-id polybar
 exec --no-startup-id picom --backend glx
 
 # xrandr monitor setup
-exec --no-startup-id xrandr --output DP-4 --auto --right-of DP-5 
+exec --no-startup-id xrandr --output DP-5 --auto --left-of DP-4
+
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
