continuing work on i3. Added nitrogen wallpaper program

--- a/home/i3/i3.conf
+++ b/home/i3/i3.conf
@@ -7,14 +7,19 @@
 
 #Execute on launch
 
-#exec_always autorandr --change
-exec_always --no-startup-id xinput set-prop 14 "libinput Accel Profile Enabled" 0 1 0 
-exec_always --no-startup-id hyprpaper
-exec --no-startup-id polybar
-exec --no-startup-id picom --backend glx
+# Set wallpapers
+exec --no-startup-id nitrogen --restore
 
-# xrandr monitor setup
-exec --no-startup-id xrandr --output DP-5 --auto --left-of DP-4
+# Start Polybar
+exec --no-startup-id polybar mybar
+
+# Start Picom
+exec --no-startup-id picom --config ~/.config/picom/picom.conf
+
+# Monitor arrangement in Hyprland
+# Ensure this is also set in your Hyprland config
+# Monitor setup
+exec --no-startup-id xrandr --output dp-4 --auto --output dp-5 --auto --right-of dp-4
 
 # i3 config file (v4)
 #
@@ -70,13 +75,13 @@ default_orientation horizontal
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id kitty
+bindsym $mod+c exec --no-startup-id kitty
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+c kill
 
 # start dmenu (now rofi) (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show drun
+bindsym $mod+r exec --no-startup-id rofi -show drun
 bindsym $mod+Tab exec --no-startup-id rofi -show window
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
@@ -176,7 +181,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+m exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 #mode "resize" {
