--- a/home/i3/i3.conf
+++ b/home/i3/i3.conf
@@ -75,7 +75,7 @@ default_orientation horizontal
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+c exec --no-startup-id kitty
+bindsym $mod+q exec --no-startup-id kitty
 
 # kill focused window
 bindsym $mod+c kill
