changed some settings to ensure compatibility

--- a/home/i3/i3.conf
+++ b/home/i3/i3.conf
@@ -11,7 +11,7 @@
 exec --no-startup-id nitrogen --restore
 
 # Start Polybar
-exec --no-startup-id polybar mybar
+exec --no-startup-id i3status
 
 # Start Picom
 exec --no-startup-id picom --config ~/.config/picom/picom.conf
@@ -19,7 +19,7 @@ exec --no-startup-id picom --config ~/.config/picom/picom.conf
 # Monitor arrangement in Hyprland
 # Ensure this is also set in your Hyprland config
 # Monitor setup
-exec --no-startup-id xrandr --output dp-4 --auto --output dp-5 --auto --right-of dp-4
+exec --no-startup-id xrandr --output DP-4 --auto --output DP-5 --auto --right-of DP-4
 
 # i3 config file (v4)
 #
