--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -185,7 +185,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, Q, exec, firefox
 bind = $mainMod SHIFT, S, exec, waybar
-
+bind = $mainMod, F, togglefullscreen
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -243,7 +243,6 @@ bind = , print, exec, grim -g "$(slurp)" $HOME/Pictures/Screenshots/$(date +'%s_
 
 # Special
 # bind = Super+Shift+M, exec, ~/.config/hypr/scripts/modswitch.sh
-bind = $mainMod, F, exec, ~/.config/hypr/scripts/hyprfocus.sh
 bind = $mainMod, L, exec, hyprctl setcursorpos $(hyprctl clients active | grep "monitor:" | cut -d" " -f4)
 ##############################
 ### WINDOWS AND WORKSPACES ###
