fixing Wm stuff. Adding necessary i3 components

--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -185,7 +185,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, Q, exec, firefox
 bind = $mainMod SHIFT, S, exec, waybar
-bind = $mainMod, F, togglefullscreen
+bind = $mainMod, F, fullscreen
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
