--- a/home/i3/i3.conf
+++ b/home/i3/i3.conf
@@ -11,7 +11,7 @@
 exec --no-startup-id nitrogen --restore
 
 # Start Polybar
-exec --no-startup-id i3status
+exec --no-startup-id bash -c 'for m in $(xrandr --query | grep " connected" | cut -d" " -f1); do MONITOR=$m polybar --reload mybar & done'
 
 # Start Picom
 exec --no-startup-id picom --config ~/.config/picom/picom.conf
