Working Stylix for Rice. Need to modify Rofi & Waybar

--- a/home/hypr/hyprpaper.conf
+++ b/home/hypr/hyprpaper.conf
@@ -1,10 +1,12 @@
 # Preload Wallpaper
-preload = ~/.config/hypr/hypr1.jpg
-preload = ~/.config/hypr/hypr2.jpg
+preload = ~/.config/hypr/Space.png
+
 
 # Set wallpaper
-wallpaper = DP-5, ~/.config/hypr/hypr1.jpg
-wallpaper = DP-4, ~/.config/hypr/hypr2.jpg
+wallpaper = DP-5, ~/.config/hypr/Space.png
+wallpaper = DP-4, ~/.config/hypr/Space.png
+
+# Stretch Across Both Monitors
 
 # Disable splash
 splash = false
