working on hyprlock

--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -43,6 +43,12 @@ $menu = rofi -show drun
 # exec-once = nm-applet &
 exec-once = waybar & hyprpaper 
 
+# Start Hypridle
+exec-once = hypridle --config ~/.config/hypr/hypridle.conf
+
+# Optionally, ensure Hyprlock works correctly before sleep
+exec-once = hyprctl dispatch exec "[[ ! -f /tmp/.hyprlock ]] && hyprlock"
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
