Hyprlock & Idle both working. Fail2Ban disabled, new security measures in place. Significantly slowed down internet, removing all outside access via ssh(save encrypted keys through physical access to machine)

--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -44,11 +44,7 @@ $menu = rofi -show drun
 exec-once = waybar & hyprpaper 
 
 # Start Hypridle
-exec-once = hypridle --config ~/.config/hypr/hypridle.conf
-
-# Optionally, ensure Hyprlock works correctly before sleep
-exec-once = hyprctl dispatch exec "[[ ! -f /tmp/.hyprlock ]] && hyprlock"
-
+exec-once = hypridle 
 
 #############################
 ### ENVIRONMENT VARIABLES ###
