--- a/home/hypr/hyprlock.conf
+++ b/home/hypr/hyprlock.conf
@@ -1,9 +1,33 @@
-[General]
-# Hide the mouse cursor while locked
+# Hyprlock Configuration File
+
+# Enable lock screen
+lock_screen = true
 hide_cursor = true
 
-[Backgrounds]
-# Set a custom background
-path = /path/to/your/wallpaper.jpg
-blur_passes = 3  # Number of blur passes on the background
+# Enable blur effect (this will rely on Hyprland's compositor)
+blur_passes = 2
+
+# Set blur radius (Hyprland needs to support this)
+blur_radius = 7
+
+# INPUT FIELD
+input-field {
+    monitor =
+    size = 250, 60
+    outline_thickness = 0
+    outer_color = rgba(0, 0, 0, 1)
+    dots_size = 0.1 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 1 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    inner_color = rgba(70, 70, 88, 0.19)
+    font_color = rgba(53, 105, 115, 1)
+    fade_on_empty = false
+    font_family = JetBrainsMono Nerd Font Mono
+    placeholder_text = <span foreground="##cdd6f4"> $USER</span>
+    hide_input = false
+    position = 0, 230
+    halign = center
+    valign = center
+    zindex = 10
+}
 
