--- a/home/hypr/hyprlock.conf
+++ b/home/hypr/hyprlock.conf
@@ -74,18 +74,18 @@ label {
     shadow_size = 10
 }
 
-image {
-    monitor =
-    path = ~/.config/hypr/space13.png 
-    size = 220 # lesser side if not 1:1 ratio
-    rounding = -1 # negative values mean circle
-    border_size = 7
-    border_color = rgb(221, 221, 221)
-    rotate = 180 # degrees, counter-clockwise
-    reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
-#    reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
-    position = 0, 200
-    halign = center
-    valign = center
-}
+#image {
+#    monitor =
+#    path = ~/.config/hypr/space13.png 
+#    size = 220 # lesser side if not 1:1 ratio
+#    rounding = -1 # negative values mean circle
+#    border_size = 7
+#    border_color = rgb(221, 221, 221)
+#    rotate = 180 # degrees, counter-clockwise
+#    reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
+##    reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
+#    position = 0, 200
+#    halign = center
+#    valign = center
+#}
 
