updated flake.lock & changed driver settings. COuld be a huge failure

--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -42,6 +42,7 @@ $menu = rofi -show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar & hyprpaper 
+exec-once = numlockx on
 
 # Start Hypridle
 exec-once = hypridle 
